--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ consultor = "^0.2.0"
 discord = "^1.0.1"
 google-api-python-client = "^2.8.0"
 gmail = "^0.6.3"
+python-dotenv = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 
